# aran

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  aclocal.m4  aran-config.h.in  aran.pc.in  autogen.sh  configure.ac  svn2cl-authors.xml  types.list
aran/: .gitignore  Makefile.am  aran.c  aran.h  aranbinomial.c  aranbinomial.h  aranbinomialbuffer@t@.c  aranbinomialbuffer@t@.h  aranccomplex.h.in  arancoefficientbuffer@t@.c  arancoefficientbuffer@t@.h  arancomplex.c  arancomplex.h  arandevelopment2d.c  arandevelopment2d.h  arandevelopment3d.c  arandevelopment3d.h  aranfit.c  aranfit.h  aranlaurentseriesd.c  aranlaurentseriesd.h  aranlegendre.c  aranlegendre.h  aranlinear.c  aranlinear.h  aranpoly1d.c  aranpoly1d.h  aranpolynomialfit.c  aranpolynomialfit.h  aranprofile-main.c  aranprofile.c  aranprofile.h  aranprofiledb.c  aranprofiledb.h  aranrusage.c  aranrusage.h  aransolver2d.c  aransolver2d.h  aransolver3d.c  aransolver3d.h  (+13 more)
docs/reference/: .gitignore  Makefile.am  aran-docs.xml  aran-sections.txt  version.xml.in
docs/reference/tmpl/: aran-unused.sgml  aran.sgml  aranbinomial.sgml  aranbinomialbuffer@t@-intro.xml  aranbinomialbufferc128.sgml  aranbinomialbufferc64.sgml  aranbinomialbufferd.sgml  aranbinomialbufferf.sgml  aranbinomialbufferl.sgml  arancoefficientbuffer@t@-intro.xml  arancoefficientbufferc128.sgml  arancoefficientbufferc64.sgml  arancoefficientbufferd.sgml  arancoefficientbufferf.sgml  arancoefficientbufferl.sgml  arancomplex.sgml  arandevelopment2d.sgml  arandevelopment3d.sgml  aranlaurentseriesd.sgml  aranlegendre.sgml  aransolver2d.sgml  aransolver3d.sgml  aransphericalharmonic.sgml  aransphericalseriesd.sgml  aranwigner.sgml  aranwignerrepo.sgml
gencode/: Makefile.am  typegens.py
m4/: Makefile.am  aran_c_complex.m4  aran_c_variable_array.m4  aran_cxx_ccomplex.m4  vl_prog_cc_warnings.m4
tests/: .gitignore  Makefile.am  dev3.at  dev3.c  dummypot.at  dummypot.c  dummypotparallel.c  gradient3.at  gradient3.c  laurent.at  laurent.c  legendre.at  legendre.c  m2l3.at  m2l3.c  multipole3.at  multipole3.c  newtonfield3.at  newtonfield3.c  newtonfield3parallel.c  newtonpot3.at  newtonpot3.c  p2l2.c  p2l3.c  profiledb-test.ini  profiledb.at  profiledb.c  rotation.at  rotation.c  special_legendre.at  special_legendre.c  sphericalharmonic.at  sphericalharmonic.c  sphericalharmonic_pregradient.at  sphericalharmonic_pregradient.c  sphericalseriesd.at  sphericalseriesd.c  taylor.at  taylor.c  taylor3.at  (+4 more)
